--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="#about">About</a>
     <a href="#research">Research</a>
     <a href="#publications">Publications</a>
-    <a href="#teaching">Teaching</a>
+    <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
 </header>
@@ -22,8 +22,7 @@
 <section id="about">
   <h2>About</h2>
   <p>
-    I am a researcher working in corpus linguistics, natural language processing,
-    and multilingual language technologies. My research focuses on data-driven
+    I am a researcher working in natural language processing,  multilingual language technologies, language modeling, and corpus linguistics. My research focuses on data-driven
     approaches to language analysis and modeling.
   </p>
 </section>
@@ -31,11 +30,12 @@
 <section id="research">
   <h2>Research Interests</h2>
   <ul>
-    <li>Corpus Linguistics</li>
     <li>Natural Language Processing</li>
     <li>Machine Translation</li>
     <li>Multilingual Language Models</li>
     <li>Language Resources for Minority Languages</li>
+    <li>Information Extraction</li>
+     <li>Corpus Linguistics</li>
   </ul>
 </section>
 
@@ -126,18 +126,18 @@ Sant, Aleix, Daniel Bardanca, José Ramom Pichel Campos, Francesca De Luca Forna
 </section>
 
 <section id="teaching">
-  <h2>Teaching</h2>
+  <h2>Research projects</h2>
   <ul>
-    <li>Natural Language Processing</li>
-    <li>Corpus Linguistics</li>
-    <li>Computational Linguistics</li>
+    <li><a href="https://hybridsproject.eu/">HYBRIDS, European Network on disinformation</a></li>
+    <li><a href="https://nos.gal/es/proxecto-nos">NÓS Project<\a></li>
+    <li>Humanize language models</li>
   </ul>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
   <p>
-    Email: <a href="mailto:pablo.gamallo@university.edu">pablo.gamallo@university.edu</a><br>
+    Email: <a href="mailto:pablo.gamallo@usc.gal">pablo.gamallo@usc.gal</a><br>
     GitHub: <a href="https://github.com/gamallo">github.com/gamallo</a>
   </p>
 </section>
