Rename section from 'teaching' to 'projects'

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Sant, Aleix, Daniel Bardanca, José Ramom Pichel Campos, Francesca De Luca Forna
   </ul>
 </section>
 
-<section id="teaching">
+<section id="projects">
   <h2>Research projects</h2>
   <ul>
     <li><a href="https://hybridsproject.eu/">HYBRIDS</a>, European Network on disinformation</li>
